# Cognitive-Workspace

./: .gitignore  app.py  cognitive_workspace.ipynb  main.py  pyproject.toml  requirements.txt
utils/: utils.py
