[project]
name = "cognitive-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.49.1",
    "xlsxwriter>=3.2.5",
]
